testdata/baselines/reference/submodule/conformance/superSymbolIndexedAccess4.errors.txt
error TS2318: Cannot find global type 'Array'.
error TS2318: Cannot find global type 'Function'.
error TS2318: Cannot find global type 'IArguments'.
error TS2318: Cannot find global type 'RegExp'.
error TS2318: Cannot find global type 'String'.
error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
error TS2552: Cannot find name 'Number'. Did you mean 'number'?
error TS2552: Cannot find name 'Object'. Did you mean 'object'?
superSymbolIndexedAccess4.ts(1,14): error TS2304: Cannot find name 'Symbol'.
superSymbolIndexedAccess4.ts(5,16): error TS2335: 'super' can only be referenced in a derived class.


!!! error TS2318: Cannot find global type 'Array'.
!!! error TS2318: Cannot find global type 'Function'.
!!! error TS2318: Cannot find global type 'IArguments'.
!!! error TS2318: Cannot find global type 'RegExp'.
!!! error TS2318: Cannot find global type 'String'.
!!! error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
!!! error TS2552: Cannot find name 'Number'. Did you mean 'number'?
!!! error TS2552: Cannot find name 'Object'. Did you mean 'object'?
==== superSymbolIndexedAccess4.ts (2 errors) ====
    var symbol = Symbol.for('myThing');
                 ~~~~~~
!!! error TS2304: Cannot find name 'Symbol'.
    
    class Bar {
        [symbol]() {
            return super[symbol]();
                   ~~~~~
!!! error TS2335: 'super' can only be referenced in a derived class.
        }
    }